# sample_python_package

./: .gitignore  CMakeLists.txt  README.md  setup.py
res/xml/: hello_world.xml
sample_cpp/: CMakeLists.txt
sample_cpp/include/: sample_cpp_common.h
sample_cpp/src/: sample_cpp_common.cpp
sample_py/: CMakeLists.txt  __init__.py  functions.py
sample_py/bindings/: pysample_bindings.cpp  pysamplecpp_bindings.cpp
